--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,9 +15,11 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse " id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-        <li><a href="{{site.baseurl}}/about/">About</a></li>
-        <li><a href="{{site.baseurl}}/contact/">Contact</a></li>
-        <li class="dropdown">
+        <li><a href="{{site.baseurl}}/about/">Sobre</a></li>
+
+        <li><a href="{{site.baseurl}}/contact/">Contatos</a></li>
+
+        <!-- <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Download <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a target="_blank" href="https://github.com/sharu725/cards">Project</a></li>
@@ -25,7 +27,8 @@
             <li role="separator" class="divider"></li>
             <li><a target="_blank" href="https://jekyll-themes.com">More Themes</a></li>
           </ul>
-        </li>
+        </li> -->
+
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
